--- a/src/styles/components/App.module.css
+++ b/src/styles/components/App.module.css
@@ -1,5 +1,5 @@
-@import '../base/variables.module.css';
-@import '../base/theme.module.css';
+@import '/src/styles/base/variables.module.css';
+@import '/src/styles/base/theme.module.css';
 
 .app {
   min-height: 100vh;
